--- a/css/style.css
+++ b/css/style.css
@@ -140,9 +140,6 @@ a {
     z-index: 0;
 	-webkit-backface-visibility: hidden;
     -webkit-animation: imageAnimation 36s linear infinite 0s;
-    -moz-animation: imageAnimation 36s linear infinite 0s;
-    -o-animation: imageAnimation 36s linear infinite 0s;
-    -ms-animation: imageAnimation 36s linear infinite 0s;
     animation: imageAnimation 36s linear infinite 0s; 
 }
 .cb-slideshow li div { 
@@ -155,9 +152,6 @@ a {
     opacity: 0;
     color: #fff;
     -webkit-animation: titleAnimation 36s linear infinite 0s;
-    -moz-animation: titleAnimation 36s linear infinite 0s;
-    -o-animation: titleAnimation 36s linear infinite 0s;
-    -ms-animation: titleAnimation 36s linear infinite 0s;
     animation: titleAnimation 36s linear infinite 0s; 
 }
 .cb-slideshow li div h3 { 
@@ -172,76 +166,46 @@ a {
 .cb-slideshow li:nth-child(2) span { 
     background-image: url('http://i.imgur.com/17aedHd.jpg');
     -webkit-animation-delay: 6s;
-    -moz-animation-delay: 6s;
-    -o-animation-delay: 6s;
-    -ms-animation-delay: 6s;
     animation-delay: 6s; 
 }
 .cb-slideshow li:nth-child(3) span { 
     background-image: url('http://i.imgur.com/dxaV9V2.jpg');
     -webkit-animation-delay: 12s;
-    -moz-animation-delay: 12s;
-    -o-animation-delay: 12s;
-    -ms-animation-delay: 12s;
     animation-delay: 12s; 
 }
 .cb-slideshow li:nth-child(4) span { 
     background-image: url('http://i.imgur.com/DnKU1vH.jpg');
     -webkit-animation-delay: 18s;
-    -moz-animation-delay: 18s;
-    -o-animation-delay: 18s;
-    -ms-animation-delay: 18s;
     animation-delay: 18s; 
 }
 .cb-slideshow li:nth-child(5) span { 
     background-image: url('http://i.imgur.com/17aedHd.jpg');
     -webkit-animation-delay: 24s;
-    -moz-animation-delay: 24s;
-    -o-animation-delay: 24s;
-    -ms-animation-delay: 24s;
     animation-delay: 24s; 
 }
 .cb-slideshow li:nth-child(6) span { 
     background-image: url('http://i.imgur.com/dxaV9V2.jpg');
     -webkit-animation-delay: 30s;
-    -moz-animation-delay: 30s;
-    -o-animation-delay: 30s;
-    -ms-animation-delay: 30s;
     animation-delay: 30s; 
 }
 .cb-slideshow li:nth-child(2) div { 
     -webkit-animation-delay: 6s;
-    -moz-animation-delay: 6s;
-    -o-animation-delay: 6s;
-    -ms-animation-delay: 6s;
     animation-delay: 6s; 
 }
 .cb-slideshow li:nth-child(3) div { 
     -webkit-animation-delay: 12s;
-    -moz-animation-delay: 12s;
-    -o-animation-delay: 12s;
-    -ms-animation-delay: 12s;
     animation-delay: 12s; 
 }
 .cb-slideshow li:nth-child(4) div { 
     -webkit-animation-delay: 18s;
-    -moz-animation-delay: 18s;
-    -o-animation-delay: 18s;
-    -ms-animation-delay: 18s;
     animation-delay: 18s; 
 }
 .cb-slideshow li:nth-child(5) div { 
     -webkit-animation-delay: 24s;
-    -moz-animation-delay: 24s;
-    -o-animation-delay: 24s;
-    -ms-animation-delay: 24s;
     animation-delay: 24s; 
 }
 .cb-slideshow li:nth-child(6) div { 
     -webkit-animation-delay: 30s;
-    -moz-animation-delay: 30s;
-    -o-animation-delay: 30s;
-    -ms-animation-delay: 30s;
     animation-delay: 30s; 
 }
 /* Animation for the slideshow images */
@@ -254,65 +218,19 @@ a {
     25% { opacity: 0 }
     100% { opacity: 0 }
 }
-@-moz-keyframes imageAnimation { 
-    0% { opacity: 0;
-    -moz-animation-timing-function: ease-in; }
-    8% { opacity: 1;
-         -moz-animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@-o-keyframes imageAnimation { 
-    0% { opacity: 0;
-    -o-animation-timing-function: ease-in; }
-    8% { opacity: 1;
-         -o-animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@-ms-keyframes imageAnimation { 
-    0% { opacity: 0;
-    -ms-animation-timing-function: ease-in; }
-    8% { opacity: 1;
-         -ms-animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
-    100% { opacity: 0 }
-}
 @keyframes imageAnimation { 
     0% { opacity: 0;
-    animation-timing-function: ease-in; }
+    -webkit-animation-timing-function: ease-in;
+            animation-timing-function: ease-in; }
     8% { opacity: 1;
-         animation-timing-function: ease-out; }
+         -webkit-animation-timing-function: ease-out;
+                 animation-timing-function: ease-out; }
     17% { opacity: 1 }
     25% { opacity: 0 }
     100% { opacity: 0 }
 }
 /* Animation for the title */
 @-webkit-keyframes titleAnimation { 
-    0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@-moz-keyframes titleAnimation { 
-    0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@-o-keyframes titleAnimation { 
-    0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@-ms-keyframes titleAnimation { 
     0% { opacity: 0 }
     8% { opacity: 1 }
     17% { opacity: 1 }
